--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,7 @@ ul {
 
 table {
   width: 100%;
+  border-collapse: collapse;
 }
 
 thead {
@@ -61,15 +62,11 @@ tr {
 }
 
 td {
-  padding: 5px 10px 5px 10px;
-  margin: 0;
-  border: 0;
+  padding: 5px 20px 5px 20px;
 }
 
 th {
-  padding: 5px 10px 5px 10px;
-  margin: 0;
-  border: 0;
+  padding: 5px 20px 5px 20px;
 }
 
 /* STILE HEADER */
