--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,13 @@ h3 {
   margin: 0;
 }
 
+h4 {
+  font-size: 20px;
+  color: gray;
+  padding: 0;
+  margin: 0;
+}
+
 p {
   font-size: 18px;
   padding: 0;
@@ -108,7 +115,7 @@ th {
 /* SEZIONE PARAGRAFO */
 
 .sezioneparagrafo {
-  margin: 15px 10px 15px 10px;
+  margin: 25px 10px 25px 10px;
 }
 
 /* SEZIONE TABELLA */
